# cocos2d-x

./: CMakeLists.txt
cmake/: bundle_fixup.cmake  make_bundle.cmake.in
cmake/Modules/: CocosBuildHelpers.cmake
cocos/2d/platform/mac/: CCPlatformDefine.h
cocos/base/: CCConsole.cpp
cocos/editor-support/cocostudio/: CMakeLists.txt
cocos/platform/win32/: CCFileUtils-win32.cpp  CCFileUtils-win32.h
cocos2dx/cocoa/: CCGeometry.h
cocos2dx/platform/android/java/: build.xml
cocos2dx/platform/linux/: CCEGLView.cpp  CCEGLView.h
cocos2dx/proj.linux/: cocos2dx.mk
document/: doxygen.config
templates/: cocos2dx_files.json
templates/cpp-template-default/: CMakeLists.txt
templates/lua-template-default/frameworks/: CMakeLists.txt
tests/cpp-empty-test/: CMakeLists.txt
tests/cpp-tests/: CMakeLists.txt
tests/lua-empty-test/project/: CMakeLists.txt
tests/lua-tests/project/: CMakeLists.txt
